--- a/README.org
+++ b/README.org
@@ -137,7 +137,7 @@ file:
 - [X] filecard overflow
 - [X] android saveFile not implement, snackbar to notify, set default save path
 - [ ] harmony os not work
-- [ ] duplicate name
+- [X] duplicate name
 * Feature
 - [X] floating action button to add data
 - [ ] schedule : delete tempfile every 10 min
